# siwecal-tb2026

./: .gitignore  NOTICE  README.md  config.example.yml  install.sh  requirements.txt  settings.example.yml  settings.yml  setup.sh  setupkey4hep.sh
.github/workflows/: ci.yml
calibration/: clean_pedestals.py  dummy_mip_map_15_highgain.txt  dummy_mip_map_15_lowgain.txt  dummy_pedestal_15_highgain.txt
event_display/: README.md  ecal_event_display.py  launch.sh
event_viewer/: README.md  __init__.py  __main__.py  _edm4hep_pid.py  _metrics.py  _paths.py  app.py  config.py  controller.py  requirements.txt
gaudi_jobs/: run_pid_batch.py
gaudi_source/: README.md
geometry/: Tungsten_thickness.yml  fev10_rotate_chip_channel_x_y_mapping.txt
k4SiWEcalReco/: CMakeLists.txt  README.md  run_pid_batch.py
k4SiWEcalReco/include/k4SiWEcalReco/: EcalShowerVars.h
k4SiWEcalReco/options/: run_pid.py
k4SiWEcalReco/src/components/: EcalPidTransformer.cpp  EcalToEDM4hep.cpp
mappings/: fev11_cob_good_rotate_chip_channel_x_y_mapping.txt  slab_z_positions.yml
siwecal_common/: __init__.py  edm4hep_pid.py  paths.py
siwecal_eventbuilder/: README.md  __init__.py  __main__.py  bcid_clustering.py  calibration.py  cli.py  config.py  event_builder.py  geometry.py  hit_collector.py  models.py  pad_map.py  pipeline.py  root_io.py  run_settings.py  settings.py
siwecal_validation/: PLAN_particle_id_metrics.md  README.md  __init__.py  __main__.py  cli.py  config.py  event_data.py  fits.py  output.py  plots.py  results.py  runner.py  selection.py  vars_cache.py
(+51 files in other folders)
